--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ base_url = "https://cubero.org"
 title = "Valeria Cubero"
 build_search_index = true
 generate_feed = true
+compile_sass = true
 minify_html = true
 
 theme = "apollo"
@@ -11,6 +12,7 @@ highlight_code = true
 highlight_theme = "ayu-dark"
 
 [extra]
+toc = true
 use_cdn = false
 theme = "auto"
 favicon = "/icon/favicon.ico"
