--- a/config.toml
+++ b/config.toml
@@ -19,11 +19,11 @@ favicon = "/icon/favicon.ico"
 mathjax = true
 mathjax_dollar_inline_enable = true
 
-#menu = [
+menu = [
 #    { name = "/posts", url= "/posts", weight= 1 },
 #    { name= "/projects", url= "/projects", weight= 2 },
 #    { name= "/about", url= "/about", weight= 3 },
-#]
+]
 
 socials = [
     #{ name= "twitter", url= "https://twitter.com/0xVALUE", icon= "twitter" },
